2009-02-16  Albrecht Dreß and Paweł Sałek

	* src/main-window.c:
	  use g_(malloc|free) instead of malloc and free
	* src/sendmsg-window.c, src/ab-main.c, src/main.c:
	  add missing include of stdlib.h if it is available
	* configure.in: always define _XOPEN_SOURCE
	* libbalsa/missing.h: declare (local|gm|c)time_r if necessary
	* libbalsa/rfc2445.c: add proper casting macros, catch and convert
	\r\n line endings (iCal compatibility), work around iCal method
	parameter bug, fix crash on NULL pointers passed to conversion
	funcs.
	* libbalsa/filter-funcs.c: use glib for time conversion if available.
	* libbalsa/mailbox_imap.c: sync the cache when closing mbox.

2009-02-15  Peter Bloomfield

	* src/balsa-mime-widget-vcalendar.c: (balsa_vevent_widget,
	vevent_reply): check all identities.

2009-02-12  Peter Bloomfield

	* src/balsa-message.h: new member gint BalsaMessage::tab_position,
	the position of the tab for header values.
	* src/balsa-mime-widget.h: new member GtkWidget *
	BalsaMimeWidget::header_widget, pointer to the header widget for
	the message.
	* src/balsa-mime-widget-message.c: (balsa_mime_widget_new_message,
	balsa_mime_widget_new_message_tl, bm_header_widget_new,
	bmwm_set_tabs, add_header_gchar,
	balsa_mime_widget_message_set_headers, bmwm_buffer_set_prefs,
	balsa_mime_widget_message_set_headers_d): set the tab position 6
	pixels beyond the length of the longest header label; set user
	prefs for fonts and colors each time we render a message, in
	case prefs have changed.

2009-02-12  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* configure.in: Added 'eu' (Basque) to ALL_LINGUAS

2009-02-08  Albrecht Dreß

	* libbalsa/rfc2445.[hc]: Implement VCALENDAR and VEVENT objects.
	* src/balsa-mime-widget-vcalendar.[hc]:
	display vevent's, and the stuff for sending a text/calendar reply;
	* src/balsa-mime-widget.c: call functions to display text/calendar
	* src/balsa-print-object-text.[hc]:  support print these parts